2003-10-03  Jesper Harder  <harder@ifa.au.dk>

	* mm-decode.el (mm-file-name-delete-control)
	(mm-file-name-delete-gotchas): New functions.
	(mm-file-name-rewrite-functions): Use them.

2003-10-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el (spam-install-hooks-function): Added Autoload cookie.

2003-10-02  Jesper Harder  <harder@ifa.au.dk>

	* pgg-def.el (pgg-default-keyserver-address): Change to
	subkeys.pgp.net.  From Michael Shields <shields@msrl.com>

2003-10-01  Simon Josefsson  <jas@extundo.com>

	* message.el (message-idna-to-ascii-rhs-1): RHS can be terminated
	by ',', as in 'foo@example.org, bar@example.org'.

2003-10-01  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-send): Fix reversed logic of supersedes
	check.

2003-09-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-view-part-as-charset): Doc fix,
	suggested by Norbert Koch <viteno@xemacs.org>.

2003-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-topic.el (gnus-topic-goto-missing-topic): Revert 2003-02-09
	change in order to correct the position where an invisible topic
	(because gnus-topic-display-empty-topics is nil) may be inserted.

2003-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-ignored-supersedes-headers): Add X-Payment.

2003-09-20  Jesper Harder  <harder@ifa.au.dk>

	* rfc2047.el (rfc2047-encode): Limit line length to 76 characters.

2003-09-20  Simon Josefsson  <jas@extundo.com>

	* tls.el (tls-process-connection-type): Doc fix.

	* imap.el (imap-starttls-open): Rewrite, should support both old
	starttls.el and new starttls.el that uses GNUTLS.

2003-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-treat-display-x-face): Use set-default instead
	of custom-set-default which isn't available in old XEmacsen.

2003-09-17  Jesper Harder  <harder@ifa.au.dk>

	* gnus-msg.el (gnus-summary-resend-message-edit): Don't convert
	to MML.  MIME -> MML -> MIME does not work for PGP/MIME.
